[package]
name = "zeroshot-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
argh = "0.1.13"
async-stream = "0.3.6"
async-trait = "0.1.88"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio", "image", "advanced", "canvas"] }
image = "0.25.6"
log = "0.4.27"
rfd = "0.15.3"
tokio = { version = "1.44.1", features = ["sync"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter", "fmt", "chrono" ] }
usls = { git = "https://github.com/jamjamjon/usls", rev = "1186904", features = [ "auto", "cuda" ] }

[dev-dependencies]
ort = { version = "2.0.0-rc.9", default-features = false, features = ["cuda", "ndarray", "copy-dylibs", "half"] }

[[example]]
name = "grounding-dino"

# fix GCC 15 compilation issues with onig sub-dependency
[patch.crates-io]
onig = { git = "https://github.com/rust-onig/rust-onig", rev = "c4378abcbf30d58cf5f230c0d2e6375f2be05a47" }
onig_sys = { git = "https://github.com/rust-onig/rust-onig", rev = "c4378abcbf30d58cf5f230c0d2e6375f2be05a47" }